<resources>
    <string name="app_name">Thirty Days Out</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add_to_calendar">Add To Calendar</string>
    <string name="title_activity_about">About Thirty Days Out</string>

    <!-- Activity main -->
    <string name="am_etDays"># of</string>
    <string name="am_tvToday"> days from </string>
    <string name="am_etStartDate">today</string>
    <string name="am_bAddCal">Add to Calendar</string>

    <!-- Add To Calendar -->
    <string name="atc_tvDate">Date</string>
    <string name="atc_tvTitle">Title</string>
    <string name="atc_etTitle">Enter a Title For This Date</string>
    <string name="atc_tvTime">Time</string>
    <string name="atc_cbAllDay">All Day Event</string>
    <string name="atc_tvStartTime">Start Time</string>
    <string name="atc_tvEndTime">End Time</string>
    <string name="atc_etStartTime">8:00 AM</string>
    <string name="atc_etEndTime">9:00 AM</string>
    <string name="atc_etDescrip">Description for this event.</string>
    <string name="atc_tvDescription">Description</string>
    <string name="atc_tvEmail">Emails</string>
    <string name="atc_etEmail">Emails for event invite,comma delimited. bob@gmail.com,mom@gmail.com</string>
    <string name="atc_bSetAppt">Set Appointment</string>

    <!--
    Test for ads
    -->
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>

    <!-- AdMob strings -->
    <string name="banner_ad">ca-app-pub-4878199364012330/1415655204</string>

    <!-- Widget -->
    <string name="widget_tvDaysOut">Days Out</string>

    <!-- Play Link -->
    <string name="play_link">https://play.google.com/store/apps/details?id=com.apexcomputerservice.thirtydaysout</string>

    <!-- Calendar Options in Preferences -->
    <string-array name="month_options">
        <item>Full Month (January)</item>
        <item>Short Month (Jan)</item>
        <item>Single Digit Month (1)</item>
        <item>Double Digit Month (01)</item>
    </string-array>
    <string-array name="month_options_values">
        <item>MMMM</item>
        <item>MMM</item>
        <item>M</item>
        <item>MM</item>
    </string-array>
    <string name="month_option_default_value">MMMM</string>

    <string-array name="day_options">
        <item>Single Digit Day (1)</item>
        <item>Double Digit Day (01)</item>
    </string-array>
    <string-array name="day_options_values">
        <item>d</item>
        <item>dd</item>
    </string-array>
    <string name="day_option_default_value">dd</string>

    <string-array name="year_option">
        <item>Full Year (2016)</item>
        <item>Double Digit Year (16)</item>
    </string-array>
    <string-array name="year_option_values">
        <item>yyyy</item>
        <item>yy</item>
    </string-array>
    <string name="year_option_default_value">yyyy</string>

    <string-array name="weekday_option">
        <item>Full Weekday (Monday)</item>
        <item>Short Weekday (Mon)</item>
    </string-array>
    <string-array name="weekday_option_value">
        <item>EEEE</item>
        <item>EEE</item>
    </string-array>
    <string name="weekday_option_default_value">EEEE</string>

    <string-array name="date_options">
        <item>Month Day Year</item>
        <item>Day Month Year</item>
        <item>Year Month Day</item>
    </string-array>
    <string-array name="date_option_values">
        <item>MMMM d, yyyy</item>
        <item>d MMMM yyyy</item>
        <item>yyyy MMMM d</item>
    </string-array>
    <string name="date_option_default_value">MMMM d, yyyy</string>

    <!-- Calendar Options in Preferences -->
    <string name="about_title">Thirty Days Out</string>
    <string name="about_copyright"><b>Copyright © 2016 Chris Allen</b></string>
    <string name="about_arr"><b>All Rights Reserved</b></string>
</resources>
