<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />
    <!--
    <android.support.v7.widget.Toolbar
        android:id="@+id/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#FF9800"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"

    /> -->


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_alignTop="@id/toolbar"
        android:layout_marginTop="60dp"
        android:id="@+id/linearLayout">



        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/etDays"
            android:hint="@string/am_etDays"
            android:inputType="number"
            />

      <TextView android:text="@string/am_tvToday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvToday"
        />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/etStartDate"
            android:hint="@string/am_etStartDate"
            android:focusable="false"


            />

    </LinearLayout>

    <LinearLayout android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_alignTop="@id/linearLayout"
        android:layout_margin="25dp"
        android:gravity="center"
        android:id="@+id/linearLayout2">
    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Will be"
        android:id="@+id/tvResult"
        android:paddingTop="20dp"
        android:gravity="center"

        android:layout_below="@+id/linearLayout2"
        android:layout_centerHorizontal="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/am_bAddCal"
        android:id="@+id/bAddCal"
        android:onClick="addToCalendar"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad">
    </com.google.android.gms.ads.AdView>


</RelativeLayout>
